--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,6 +23,14 @@
                 "url": "/",
                 "icon": "linkedin",
                 "elementId": ""
+            },
+            {
+                "type": "Social",
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "instagram",
+                "elementId": ""
             }
         ],
         "styles": {
