--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
         "type": "Header",
         "headerVariant": "variant-c",
         "isSticky": false,
-        "title": "Vikhyat Chauhan",
+        "title": "VC",
         "isTitleVisible": true,
         "primaryLinks": [],
         "socialLinks": [
