--- a/content/data/config.json
+++ b/content/data/config.json
@@ -6,7 +6,7 @@
         "headerVariant": "variant-c",
         "isSticky": false,
         "title": "VC",
-        "isTitleVisible": false,
+        "isTitleVisible": true,
         "primaryLinks": [],
         "socialLinks": [
             {
