--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,39 +3,60 @@
     "favicon": "/images/favicon.svg",
     "header": {
         "type": "Header",
-        "headerVariant": "variant-c",
-        "isSticky": false,
-        "title": "VC",
+        "title": "Your Brand",
         "isTitleVisible": true,
-        "primaryLinks": [],
-        "socialLinks": [
+        "logo": {
+            "type": "ImageBlock",
+            "url": "https://assets.stackbit.com/components/images/default/default-image.png",
+            "altText": "Your logo image",
+            "caption": "",
+            "elementId": ""
+        },
+        "primaryLinks": [
             {
-                "type": "Social",
-                "altText": "GitHub",
-                "label": "GitHub",
-                "url": "https://github.com/netlify-templates",
-                "icon": "github"
-            },
-            {
-                "type": "Social",
-                "label": "Facebook",
-                "altText": "",
+                "type": "Link",
+                "label": "Home",
+                "altText": "Home",
                 "url": "/",
-                "icon": "linkedin",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
                 "elementId": ""
             },
             {
-                "type": "Social",
-                "label": "Facebook",
-                "altText": "",
+                "type": "Link",
+                "label": "Blog",
+                "altText": "Blog",
                 "url": "/",
-                "icon": "instagram",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
                 "elementId": ""
             }
         ],
+        "socialLinks": [
+            {
+                "type": "Social",
+                "label": "",
+                "altText": "X (Twitter)",
+                "url": "/",
+                "icon": "twitter",
+                "elementId": ""
+            },
+            {
+                "type": "Social",
+                "label": "",
+                "altText": "GitHub",
+                "url": "/",
+                "icon": "github",
+                "elementId": ""
+            }
+        ],
+        "headerVariant": "variant-c",
+        "isSticky": false,
         "styles": {
             "self": {
-                "width": "full"
+                "width": "narrow"
             }
         }
     }
