config.json: updated isSticky in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
             }
         ],
         "headerVariant": "variant-c",
-        "isSticky": false,
+        "isSticky": true,
         "styles": {
             "self": {
                 "width": "narrow"
