config.json: updated headerVariant in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -45,7 +45,7 @@
                 "elementId": ""
             }
         ],
-        "headerVariant": "variant-c",
+        "headerVariant": "variant-b",
         "isSticky": true,
         "styles": {
             "self": {
