--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
         "isSticky": true,
         "styles": {
             "self": {
-                "width": "wide"
+                "width": "full"
             }
         },
         "logo": {
