--- a/content/data/config.json
+++ b/content/data/config.json
@@ -30,6 +30,14 @@
         "socialLinks": [
             {
                 "type": "Social",
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "linkedin",
+                "elementId": ""
+            },
+            {
+                "type": "Social",
                 "label": "",
                 "altText": "X (Twitter)",
                 "url": "/",
