config.json: updated socialLinks in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,6 +38,14 @@
             },
             {
                 "type": "Social",
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "instagram",
+                "elementId": ""
+            },
+            {
+                "type": "Social",
                 "label": "",
                 "altText": "GitHub",
                 "url": "/",
