--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,15 +3,8 @@
     "favicon": "/images/favicon.svg",
     "header": {
         "type": "Header",
-        "title": "Your Brand",
-        "isTitleVisible": true,
-        "logo": {
-            "type": "ImageBlock",
-            "url": "https://assets.stackbit.com/components/images/default/default-image.png",
-            "altText": "Your logo image",
-            "caption": "",
-            "elementId": ""
-        },
+        "title": "Vikhyat Chauhan",
+        "isTitleVisible": false,
         "primaryLinks": [
             {
                 "type": "Link",
@@ -37,10 +30,18 @@
         "socialLinks": [
             {
                 "type": "Social",
-                "label": "",
-                "altText": "X (Twitter)",
+                "label": "Facebook",
+                "altText": "",
                 "url": "/",
-                "icon": "twitter",
+                "icon": "linkedin",
+                "elementId": ""
+            },
+            {
+                "type": "Social",
+                "label": "Facebook",
+                "altText": "",
+                "url": "/",
+                "icon": "instagram",
                 "elementId": ""
             },
             {
@@ -52,12 +53,19 @@
                 "elementId": ""
             }
         ],
-        "headerVariant": "variant-c",
-        "isSticky": false,
+        "headerVariant": "variant-b",
+        "isSticky": true,
         "styles": {
             "self": {
-                "width": "narrow"
+                "width": "full"
             }
+        },
+        "logo": {
+            "type": "ImageBlock",
+            "url": "/images/favicon.svg",
+            "altText": "altText of the image",
+            "caption": "Caption of the image",
+            "elementId": ""
         }
     }
 }
