--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "header": {
         "type": "Header",
         "title": "Vikhyat Chauhan",
-        "isTitleVisible": false,
+        "isTitleVisible": true,
         "primaryLinks": [
             {
                 "type": "Link",
