--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,7 +62,7 @@
         },
         "logo": {
             "type": "ImageBlock",
-            "url": "/images/favicon.svg",
+            "url": "https://assets.stackbit.com/components/images/default/default-image.png",
             "altText": "altText of the image",
             "caption": "Caption of the image",
             "elementId": ""
