config.json: updated isSticky in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,7 +54,7 @@
             }
         ],
         "headerVariant": "variant-b",
-        "isSticky": false,
+        "isSticky": true,
         "styles": {
             "self": {
                 "width": "full"
