config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -64,7 +64,8 @@
             "type": "ImageBlock",
             "altText": "altText of the image",
             "caption": "Caption of the image",
-            "elementId": ""
+            "elementId": "",
+            "url": "/images/favicon.svg"
         }
     }
 }
