config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -65,7 +65,7 @@
             "altText": "altText of the image",
             "caption": "Caption of the image",
             "elementId": "",
-            "url": "/images/favicon.svg"
+            "url": "/images/favicon_with_vc_centered.svg"
         }
     }
 }
