config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -3,7 +3,7 @@
     "favicon": "/images/favicon.svg",
     "header": {
         "type": "Header",
-        "title": "Vikhyat Chauhan",
+        "title": "VC",
         "isTitleVisible": true,
         "primaryLinks": [
             {
